# scl-feature

./: README.md
benchmark/DefaultTool/: main.cpp
doc/ru/: Holder.md  Tool.md  Types.md  Wrapper.md
example/Atomic/: main.cpp
example/Cast/: main.cpp
example/Inheritance/: BaseType.h  DerivedType.h  main.cpp
example/Optional/: main.cpp
example/Reflection/: main.cpp
example/Syntax/: main.cpp
example/Trait/: main.cpp
example/Typedef/: main.cpp
include/ScL/: Feature.h
include/ScL/Feature/: Access.h  Cast.h  Caster.h  Guard.h  MixIn.h  Reflection.h  Tool.h  Trait.h  Wrapper.h
project/cmake/: CMakeLists.txt
project/cmake/example/: CMakeLists.txt
project/cmake/test/: CMakeLists.txt
project/cmake/test/Cast/: CMakeLists.txt
project/qmake/: scl-feature.prf  scl-feature.pro
project/qmake/benchmark/: scl-feature.pro
project/qmake/example/: scl-feature.pro
project/qmake/test/: scl-feature.pro
src/: Cast.h  Caster.h  Guard.h  MixIn.h  Reflection.h  Trait.h  Wrapper.h
src/Access/: HolderGuard.h  ValueGuard.h  ValueLock.h  ValuePointer.h  WrapperGuard.h  WrapperLock.h
src/Access/Detail/: HolderInterface.h  ReferPointer.h
src/Detail/: BinaryOperator.h  MethodReflection.h  Operator.h  OperatorTool.h  PropertyReflection.h  Range.h  RangeTool.h  Resolver.h  ResultSwitch.h  UnaryOperator.h  Wrapper.h
src/Reflection/: map.h  unordered_map.h  vector.h
test/Api/: MyType.h  main.cpp  testAllTool.cpp  testOperators.cpp
test/Cast/: main.cpp
test/MultiTool/: MyType.h  main.cpp  testAllTool.cpp
test/Operator/: main.cpp
test/Stream/: main.cpp
(+96 files in other folders)
